packages/idris_db/test/errors/class/constructor_named.dart
// unnamed constructor

import 'package:idris_db/idris_db.dart';

@collection
class Model {
  Model.create();

  late int id;
}
